2007-09-12  Martin Rudalics  <rudalics@gmx.at>

	* dired.el (dired-warning): Inherit from font-lock-warning-face to
	make it show up with eight colors.

2007-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* diff-mode.el (diff-sanity-check-hunk): Fix up the case when unified
	diffs are concatenated with no intervening line.

2007-09-10  Dave Love  <fx@gnu.org>

	* progmodes/python.el: Merge changes from Dave Love's v2007-Sep-10.
	(python-font-lock-keywords): Update to the 2.5 version of the language.
	(python-quote-syntax): Let-bind font-lock-syntactic-keywords to nil.
	(python-backspace): Only behave funny in code.
	(python-compilation-regexp-alist): Add PDB stack trace regexp.
	(inferior-python-mode): Add PDB prompt regexp.
	(python-fill-paragraph): Refine the fenced-string regexp.
	(python-find-imports): Handle imports spanning several lines.
	(python-mode): Add `class' to hideshow support.

2007-09-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pcvs.el (cvs-mode-add-change-log-entry-other-window): Use
	add-log-buffer-file-name-function rather than bind buffer-file-name,
	so we dont end up calling change-log-mode in *cvs* when `fi' is the
	ChangeLog file itself.

	* outline.el (outline-flag-region): Use front-advance.

2007-09-07  Ilya Zakharevich  <ilyaz@cpan.org>

	* progmodes/cperl-mode.el: Merge upstream 5.23.
	(cperl-where-am-i): Remove function.
	(cperl-backward-to-noncomment): Don't go too far when skipping POD/HEREs
	(cperl-sniff-for-indent): De-invert [string] and [comment].
	When looking for label, skip s:m:y:tr.
	(cperl-indent-line): Likewise.
	(cperl-mode): Don't assume `font-lock-multiline' is auto-local.
	(cperl-windowed-init): Wrong `ps-print' handling.
	Both thanks to Chong Yidong.
	(cperl-look-at-leading-count): Could fail with unfinished RExen.
	(cperl-find-pods-heres): If the second part of s()[] is missing,
	don't try to highlight delimiters...

2007-09-07  Stefan Monnier  <monnier@iro.umontreal.ca>
