@@ -1,3 +1,8 @@
+2007-09-12  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* term/xterm.el (terminal-init-xterm): Add bindings for M-S- and
+	C-M-S- keys.
+
 2007-09-12  Martin Rudalics  <rudalics@gmx.at>
 
 	* dired.el (dired-warning): Inherit from font-lock-warning-face to
